--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "ts-interface-checker": "^1.0.2",
     "vite": "^6.2.0"
   }
 }
