data pass by backend to MongoDb

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,2 @@
-DB_NAME = ev-power
-DB_USER = root
-DB_PASSWORD = 
-DB_HOST = localhost
-PORT = 5000
-FRONTEND_URL='http://localhost:5173'
+MONGOURI = mongodb://127.0.0.1:27017/recurementProcess
+PORT = 3000
