--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql": "^2.18.1",
-    "sequelize": "^6.37.7"
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2"
   }
 }
