--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 MONGOURI = mongodb://127.0.0.1:27017/recurementProcess
 PORT = 5000
+EMAIL = sandipbaste999@gmail.com
+ADMINEMAIL = sandipbaste9999@gmail.com
+EMAILPASSWORD = xlun ybpv auug qwbn
