--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,5 @@ PORT = 5000
 EMAIL = sandipbaste999@gmail.com
 ADMINEMAIL = sandipbaste9999@gmail.com
 EMAILPASSWORD = xlun ybpv auug qwbn
-CLIENT_BASE_URL=http://localhost:5173/onlinetest
+CLIENT_BASE_URL=http://localhost:5173/user-aptitude-login
+JWT_SECRET = sandipbaste
