change email password

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@ MONGOURI = mongodb://127.0.0.1:27017/recurementProcess
 PORT = 5000
 EMAIL = sandipbaste999@gmail.com
 ADMINEMAIL = sandipbaste9999@gmail.com
-EMAILPASSWORD = xlun ybpv auug qwbn
+EMAILPASSWORD = kezl daos cjpw mvqu
 CLIENT_BASE_URL=http://localhost:5173/user-aptitude-login
 JWT_SECRET = sandipbaste
