--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.3",
+    "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.1"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.9"
+    "nodemailer": "^6.10.1",
+    "nodemon": "^3.1.10"
   }
 }
