--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-MONGOURI = mongodb://127.0.0.1:27017/databasename
+MONGOURI = mongodb://127.0.0.1:27017/recurementProcess
 PORT = 5000
-EMAIL = hr@gmail.com
-ADMINEMAIL = adminemail@gmail.com
-EMAILPASSWORD = EMAILPASSWORD
+EMAIL = sandipbaste999@gmail.com
+ADMINEMAIL = sandipbaste9999@gmail.com
+EMAILPASSWORD = kezl daos cjpw mvqu
 CLIENT_BASE_URL=http://localhost:5173/user-aptitude-login
-JWT_SECRET = JWT_SECRET_key
+JWT_SECRET = sandipbaste
