--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
-MONGOURI = mongodb://127.0.0.1:27017/recurementProcess
+MONGOURI = mongodb://127.0.0.1:27017/databasename
 PORT = 5000
-EMAIL = sandipbaste999@gmail.com
-ADMINEMAIL = sandipbaste9999@gmail.com
-EMAILPASSWORD = xlun ybpv auug qwbn
-CLIENT_BASE_URL=http://localhost:5173/onlinetest
+EMAIL = hr@gmail.com
+ADMINEMAIL = adminemail@gmail.com
+EMAILPASSWORD = EMAILPASSWORD
+CLIENT_BASE_URL=http://localhost:5173/user-aptitude-login
+JWT_SECRET = JWT_SECRET_key
