--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 MONGOURI = mongodb://127.0.0.1:27017/databasename
 PORT = 5000
-EMAIL = sandipbaste999@gmail.com
-ADMINEMAIL = sandipbaste9999@gmail.com
-EMAILPASSWORD = kezl daos cjpw mvqu
+EMAIL = hr@gmail.com
+ADMINEMAIL = adminemail@gmail.com
+EMAILPASSWORD = EMAILPASSWORD
 CLIENT_BASE_URL=http://localhost:5173/user-aptitude-login
-JWT_SECRET = sandipbaste
+JWT_SECRET = JWT_SECRET_KEY
